--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,20 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <!-- servlet的内部名称，自定义。尽量有意义 -->
+    <servlet-name>TestServlet</servlet-name>
+    <!-- servlet的类全名： 包名+简单类名 -->
+    <servlet-class>servlet.TestServlet</servlet-class>
+  </servlet>
+  <!-- servlet的映射配置 -->
+  <servlet-mapping>
+    <!-- servlet的内部名称，一定要和上面的内部名称保持一致！！ -->
+    <servlet-name>TestServlet</servlet-name>
+    <!-- servlet的映射路径（访问servlet的名称） -->
+    <url-pattern>/test</url-pattern>
+    <!--    <url-pattern>/*.do</url-pattern>-->
+    <!--    <url-pattern>/servlet/*</url-pattern>-->
+  </servlet-mapping>
 </web-app>
+
